<resources>
    <string name="app_name">Casandra</string>
    <string name="action_settings">Opciones</string>
    <string name="action_acerca">Acerca de</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Login Screen-->
    <string name="title_login">INICIO DE SESIÓN</string>
    <string name="subtitle_login">MODO ADMINISTRADOR</string>
    <string name="label_user_login">USUARIO</string>
    <string name="label_pass_login">CONTRASEÑA</string>
    <string name="label_btn_ok">ACEPTAR</string>
    <string name="label_btn_cancel">CANCELAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Casandra</string>
    <string name="title_activity_maps_example">Map</string>

    <!-- TODO: Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anderson Jurado Castro</string>
    <string name="nav_header_subtitle">gan091@hotmail.com</string>
    <string name="nav_header_mobil">3177602383</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Menu Navigation Drawer-->
    <string name="mOpAddUser">Registrar Usuario</string>
    <string name="mOpShowUser">Mostrar Usuarios</string>
    <string name="mOpLogin">Iniciar Sesión</string>
    <string name="mOpCloseLogin">Cerrar Sesión</string>
    <string name="mOpSetCam">Fijar Camara</string>
    <string name="mOpBackup">Respaldo de Información</string>
    <string name="mOpGenerateExtraRecords">Generar Registros Adicionales</string>
    <string name="mOpUpdateRecords">Actualizar Registros</string>

    <string name="description_app">
        Aplicativo móvil desarrollado en el marco del Convenio Interadministrativo No.2017000277 celebrado entre la
        Universidad de Nariño y el Municipio de La Florida – Nariño, denominado “Revisión y Ajuste del Esquema de Ordenamiento
        Territorial del Municipio de La Florida – Departamento de Nariño”
    </string>
</resources>
